--- a/index_style.css
+++ b/index_style.css
@@ -16,14 +16,23 @@ body {
   transform:translate(-50%,-50%);
 }
 
-.choiceswrapper {
-  /*width: 50%;
-  display: inline-flex;
-  position: relative;
-  top:50%;
-  left:50%;
-  transform:translate(-50%,-50%);
-  padding-top: 2em;*/
+.options_wrapper {
+  display: grid;
+  grid-template-rows: 100px;
+  grid-template-columns: repeat(3, 200px);
+  grid-auto-rows: 100px;
+  grid-column-gap: 5px;
+  grid-row-gap: 5px;
+  justify-content: center;
+  /*background-color: #5A5C62;*/
+}
+
+.option {
+  /*width: 200px;*/
+  /*height: 100px;*/
+  text-align: center;
+  align-self: center;
+  /*background-color: #212020;*/
 }
 
 .passwordlink {
